--- a/src/components/panels/power-roll/power-roll-panel.scss
+++ b/src/components/panels/power-roll/power-roll-panel.scss
@@ -12,13 +12,13 @@
 
 		&.power-roll-header {
 			font-weight: 600;
-			padding-bottom: 8px;
+			padding-bottom: 10px;
 			border-bottom: 1px solid rgba(5, 5, 5, 0.06);
 		}
 
 		&.power-roll-footer {
 			border-top: 1px solid rgba(5, 5, 5, 0.06);
-			margin-bottom: -8px;
+			margin-bottom: -10px;
 		}
 
 		.tier {
